# taxi-xpress

./: .gitignore  LICENSE  README.md
http_server/: .env  Cargo.toml  Rocket.toml  db.sql  start-db.sh
http_server/migrations/: 20230513145922_stations.sql  20230513145931_taxis.sql  20230513145936_user_accounts.sql  20230513152608_user_accounts.sql  20230513155646_user_accounts.sql  20230513190223_taxis.sql  20230516135008_stations.sql  20230516135040_taxis.sql  20230516135104_user_accounts.sql  20230517102950_trips.sql  20230517103031_bookings.sql  20230518123000_trips.sql  db.sql  stations.sql
http_server/src/: accounts.rs  controllers.rs  data.rs  error.rs  guards.rs  lib.rs  main.rs  models.rs  password.rs  repo.rs  stations.rs  utils.rs
http_server/src/controllers/: accounts.rs  searches.rs  stations.rs  taxis.rs  trips.rs
http_server/src/data/: station_dao.rs  taxi_dao.rs  user_account_dao.rs
http_server/src/guards/: admin_repo.rs  mini_search.rs  search.rs  search_repo.rs  taxi_owner.rs  trips_repo.rs  user_repo.rs
http_server/src/models/: criteria.rs  station.rs  taxi.rs  taxi_owner.rs
http_server/src/repo/: admin_repo.rs  search_repo.rs  trips_repo.rs  user_repo.rs
http_server/src/utils/: time.rs
web/: next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx  provider.tsx  styles.module.css
web/components/: Logo.tsx  TopBar.tsx
web/hooks/: useSearch.ts  useStation.ts  useTaxis.ts
web/libs/: constants.ts  getCriteria.ts  getSearch.ts  getStation.ts  getStations.ts  types.ts
(+27 files in other folders)
