[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = true
opt-level="z"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets", "uuid"] }

[dependencies.uuid]
version = "1.3.2"
features = ["v4", "fast-rng", "serde"]

[dependencies.time]
version = "0.3.20"
features = ["macros", "serde-human-readable"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.96"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.6"
features = ["migrate", "uuid", "time", "chrono"]

[dependencies.dotenvy]
version = "0.15.7"

[dependencies.log]
version = "0.4.17"

[dependencies.thiserror]
version = "1.0.40"

[dependencies.bcrypt]
version = "0.14.0"

[dependencies.serde_with]
version = "3.0.0"

[dependencies.validator]
version = "0.16.0"
features = ["derive"]

[dependencies.rand]
version = "0.8.5"

[dependencies.chrono]
version = "0.4.24"
features = ["serde", "clock"]
